Button changed to red

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
                 <a href="#" class="text-selected-text">Home</a>
                 <a href="#work">My Work</a>
                 <a href="#clients">Clients</a>
-                <a href="#hire"><button class="px-6 py-2 bg-blue-600 font-bold">Hire me</button></a>
+                <a href="#hire"><button class="px-6 py-2 bg-red-600 font-bold">Hire me</button></a>
             </div>
             <div class="md:hidden">
                 <i class="fa-solid fa-bars text-white text-4xl"></i>
             </div>
+            <div></div>
         </div>
     </header>
 </body>
