--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body class="bg-black text-white pb-12">
     <header class="py-6">
@@ -20,12 +20,40 @@
                 <a href="#" class="text-selected-text">Home</a>
                 <a href="#work">My Work</a>
                 <a href="#clients">Clients</a>
-                <a href="#hire"><button class="px-6 py-2 bg-red-600 font-bold">Hire me</button></a>
+                <a href="#hire"><button class="px-6 py-2 bg-blue-600 font-bold">Hire me</button></a>
             </div>
             <div class="md:hidden">
                 <i class="fa-solid fa-bars text-white text-4xl"></i>
             </div>
         </div>
     </header>
+
+    <div class="container mt-16 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
+        <div class="flex flex-wrap md:flex-nowrap">
+            <nav class="inline-block lg:mr-24 lg:w-4 fixed left-percentage hidden xl:block">
+                <div class="absolute left-50 transform -translate-x-1/2 space-y-6 mt-36">
+                    <a href="#" class="nav-dot selected-circle block w-7 h-7 rounded-full border-4 border-nav bg-blue-600">
+                        <span class="bg-black px-2 py-1 rounded-md ml-10 opacity-0">
+                            Home
+                        </span>
+                    </a>
+                    <a href="#" class="nav-dot block w-7 h-7 rounded-full border-4 border-nav bg-black">
+                        <span class="bg-black px-2 py-1 rounded-md ml-10 opacity-0">
+                            Work
+                        </span>
+                    </a>
+                    <a href="#" class="nav-dot block w-7 h-7 rounded-full border-4 border-nav bg-black">
+                        <span class="bg-black px-2 py-1 rounded-md ml-10 opacity-0">
+                            Clients
+                        </span>
+                    <a href="#" class="nav-dot block w-7 h-7 rounded-full border-4 border-nav bg-black">
+                        <span class="bg-black px-2 py-1 rounded-md ml-10 opacity-0">
+                            Hire
+                        </span>
+                    </a>
+                </div>
+            </nav>
+        </div>
+    </div>
 </body>
 </html>
