--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="index.css">
 </head>
-<body class="bg-black text-white pb-12">
+<body class="bg-body text-white pb-12">
     <header class="py-6">
         <div class="container flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
             <div class="text-lg font-bold">Jonathan.doe</div>
@@ -37,23 +37,66 @@
                             Home
                         </span>
                     </a>
-                    <a href="#" class="nav-dot block w-7 h-7 rounded-full border-4 border-nav bg-black">
-                        <span class="bg-black px-2 py-1 rounded-md ml-10 opacity-0">
+                    <a href="#" class="nav-dot block w-7 h-7 rounded-full border-4 border-nav bg-body">
+                        <span class="bg-body px-2 py-1 rounded-md ml-10 opacity-0">
                             Work
                         </span>
                     </a>
-                    <a href="#" class="nav-dot block w-7 h-7 rounded-full border-4 border-nav bg-black">
-                        <span class="bg-black px-2 py-1 rounded-md ml-10 opacity-0">
+                    <a href="#" class="nav-dot block w-7 h-7 rounded-full border-4 border-nav bg-body">
+                        <span class="bg-body px-2 py-1 rounded-md ml-10 opacity-0">
                             Clients
                         </span>
-                    <a href="#" class="nav-dot block w-7 h-7 rounded-full border-4 border-nav bg-black">
-                        <span class="bg-black px-2 py-1 rounded-md ml-10 opacity-0">
+                    <a href="#" class="nav-dot block w-7 h-7 rounded-full border-4 border-nav bg-body">
+                        <span class="bg-body px-2 py-1 rounded-md ml-10 opacity-0">
                             Hire
                         </span>
                     </a>
                 </div>
             </nav>
+
+            <div class="flex flex-wrap lg:ml-20 justify-center md:justify-start max-w-xl mt-0 md:my-36">
+                <h1 class="font-bold text-5xl md:text06xl lg:text-7xl text-center md:text-left">
+                    Building <br> beautiful web experiences.
+                </h1>
+
+                <div class="w-full flex justify-center md:justify-start">
+                    <button class="px-8 py-4 bg-blue-600 text-white font bold mt-12 flex items-center space-x-3">
+                        <div>
+                            <i class="fa-solid fa-eye"></i>
+                        </div>
+                        <span>My work.</span>
+                    </button>
+                </div>
+            </div>
+
+            <img src="./src/img/man.png" alt="Man" class="w-3/4 mt-12 md:absolute -mt-6 md:mt-0 right-0 -z-1">
         </div>
+    </div>
+
+    <div class="container mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
+        <section class="w-full">
+            <h2 id="work" class="font-bold text-3xl">
+                My work
+            </h2>
+            <p class="text-secondary my-6 w-full max-w-3xl">
+                I've had the pleasure of working with multiple Fortune 500 companies, designing and implementing both frontend and backend.
+            </p>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6">
+                <img src="./src/img/1.png">
+                <img src="./src/img/2.png">
+                <img src="./src/img/3.png">
+                <img src="./src/img/4.png">
+                <img src="./src/img/5.png">
+                <img src="./src/img/6.png">
+                <img src="./src/img/7.png">
+                <img src="./src/img/8.png">
+                <img src="./src/img/9.png">
+            </div>
+        </section>
+    </div>
+
+    <div class="container mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
+
     </div>
 </body>
 </html>
