--- a/index.html
+++ b/index.html
@@ -96,7 +96,101 @@
     </div>
 
     <div class="container mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
+        <section class="w-full">
+            <h2 id="clients" class="font-bold text-3xl">Clients</h2>
+            <p class="text-secondary my-6 w-full max-w-3xl">I've had the pleasure of working with multiple Fortune 500 companies, designing and implementing both frontend and backend.</p>
 
+            <div class="space-y-12 my-16">
+                <div class="w-full border border-nav p-16 lg:px-32 lg:py-20 lg:space-x-32 flex justify-center lg:justify-start flex-wrap lg:flex-nowrap">
+                    <div class="mb-6 lg:mb-0">
+                        <i class="fa-brands fa-apple text-6xl"></i>
+                    </div>
+                    <div class="flex flex-wrap justify-center text-center lg:text-left lg:block">
+                        <h3 class="text-white text-3xl font-semibold">Apple, inc</h3>
+
+                        <div class="w-full lg:w-auto flex flex-wrap justify-center lg:justify-start gap-3 mt-6 mb-8">
+                            <div class="bg-gray-600">UI/UX</div>
+                            <div class="bg-gray-600">Frontend development</div>
+                        </div>
+                        <p class="text-secondary">I've had the pleasure of working with multiple Fortune 500 companies, designing and implementing both frontend and backend.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="space-y-12 my-16">
+                <div class="w-full border border-nav p-16 lg:px-32 lg:py-20 lg:space-x-32 flex justify-center lg:justify-start flex-wrap lg:flex-nowrap">
+                    <div class="mb-6 lg:mb-0">
+                        <i class="fa-brands fa-apple text-6xl"></i>
+                    </div>
+                    <div class="flex flex-wrap justify-center text-center lg:text-left lg:block">
+                        <h3 class="text-white text-3xl font-semibold">Apple, inc</h3>
+
+                        <div class="w-full lg:w-auto flex flex-wrap justify-center lg:justify-start gap-3 mt-6 mb-8">
+                            <div class="bg-gray-600">UI/UX</div>
+                            <div class="bg-gray-600">Frontend development</div>
+                        </div>
+                        <p class="text-secondary">I've had the pleasure of working with multiple Fortune 500 companies, designing and implementing both frontend and backend.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="space-y-12 my-16">
+                <div class="w-full border border-nav p-16 lg:px-32 lg:py-20 lg:space-x-32 flex justify-center lg:justify-start flex-wrap lg:flex-nowrap">
+                    <div class="mb-6 lg:mb-0">
+                        <i class="fa-brands fa-apple text-6xl"></i>
+                    </div>
+                    <div class="flex flex-wrap justify-center text-center lg:text-left lg:block">
+                        <h3 class="text-white text-3xl font-semibold">Apple, inc</h3>
+
+                        <div class="w-full lg:w-auto flex flex-wrap justify-center lg:justify-start gap-3 mt-6 mb-8">
+                            <div class="bg-gray-600">UI/UX</div>
+                            <div class="bg-gray-600">Frontend development</div>
+                        </div>
+                        <p class="text-secondary">I've had the pleasure of working with multiple Fortune 500 companies, designing and implementing both frontend and backend.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+
+
+    <div class="container mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
+        <section class="w-full">
+            <h2 id="hire" class="font-bold text-3xl">Hire me</h2>
+            <p class="text-secondary my-6 w-full max-w-3xl">
+                Feel free to contact me at any time, through any 
+            </p>
+
+            <div class="w-full grid lg:grid-cols-2 lg:gap-32 mt-24">
+                <div class="space-y-12">
+                    <div>
+                        <label class="text-white block mb-6 text-xl font-bold">Name</label>
+                        <input type="text" class="w-full border border-input-border bg-input px-4 py-4 bg-gray-600">
+                    </div>
+                    <div>
+                        <label class="text-white block mb-6 text-xl font-bold">Email</label>
+                        <input type="email" class="w-full border border-input-border bg-input px-4 py-4 bg-gray-600">
+                    </div>
+                    <div>
+                        <label class="text-white block mb-6 text-xl font-bold">Message</label>
+                        <textarea type="email" class="w-full border border-input-border bg-input px-4 py-4 bg-gray-600"></textarea>
+                    </div>
+                    <button class="px-6 py-2 bg-blue-600 text-white font-bold">Send it</button>
+                </div>
+
+                <div class="mt-12">
+                    <p class="text-secondary">555-555-1234</p>
+                    <a href="mailto:email@mydomain.com" class="text-secondary underline mt-2 text-white">email@gmail.com</a>
+
+                    <div class="flex mt-20 space-x-6">
+                        <a href="#">
+                            <i class="fa-brands fa-skype text-4xl"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa-brands fa-twitter text-4xl"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
